tests/fixtures/invalid/divmod_4_args.py
# divmod() takes at most 2 arguments, got 4
x = divmod(1, 1, 1, 1)
